// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Block background 1`] = `
<div
  className="uu5-bricks-block uu5-bricks-block-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block background 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block background 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block background 4`] = `
<div
  className="uu5-bricks-block uu5-bricks-block-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block className 1`] = `
<div
  className="uu5-bricks-block my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 1`] = `
<div
  className="color-schema-default uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 2`] = `
<div
  className="color-schema-red uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 3`] = `
<div
  className="color-schema-red uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 6`] = `
<div
  className="color-schema-green uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 7`] = `
<div
  className="color-schema-green uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 14`] = `
<div
  className="color-schema-purple uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 15`] = `
<div
  className="color-schema-purple uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 18`] = `
<div
  className="color-schema-brown uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 19`] = `
<div
  className="color-schema-brown uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 22`] = `
<div
  className="color-schema-orange uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 23`] = `
<div
  className="color-schema-orange uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 30`] = `
<div
  className="color-schema-grey uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 31`] = `
<div
  className="color-schema-grey uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 34`] = `
<div
  className="color-schema-pink uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 35`] = `
<div
  className="color-schema-pink uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema 38`] = `
<div
  className="color-schema-pink uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block content 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Block content 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Block content 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Block content 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Block controlled 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block controlled 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block controlled 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block controlled 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block default props 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled 1`] = `
<div
  className="uu5-bricks-block uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Block disabled 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled 4`] = `
<div
  className="uu5-bricks-block uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Block dynamic 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block dynamic 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block dynamic 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block dynamic 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden 1`] = `
<div
  className="uu5-bricks-block uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden 4`] = `
<div
  className="uu5-bricks-block uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block id 1`] = `
<div
  className="uu5-bricks-block"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block mainAttrs 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block name 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 5`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 6`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 7`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 8`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 9`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 10`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 11`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 12`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 13`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 14`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Block nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Block nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Block nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Block nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Block nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Block noIndex 1`] = `
<div
  className="uu5-bricks-block uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block noIndex 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block noIndex 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block noIndex 4`] = `
<div
  className="uu5-bricks-block uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected 1`] = `
<div
  className="uu5-bricks-block uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected 4`] = `
<div
  className="uu5-bricks-block uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block style 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block style 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block style 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block style 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector 2`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector 4`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block tooltip 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
